# Intro

./: .gitignore  Dockerfile  README.md  docker-compose.yml  intro-chat.py  prompt.md  pyproject.toml
src/intro/: __init__.py  app.py  cortex.py  hippo.py  main.py  models.py  ollama.py  service.py
