[project]
name = "intro"
version = "0.1.0"
description = "Alpha's metacognitive layer - notices what's memorable"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "pondside @ git+https://github.com/Pondsiders/pondside-sdk@v0.1.2",
]

[project.scripts]
intro = "intro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intro"]
