[project]
name = "intro"
version = "0.2.0"
description = "Alpha's metacognitive layer - notices what's memorable"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pondside @ git+https://github.com/Pondsiders/pondside-sdk@v0.1.2",
]

[project.scripts]
intro = "intro.app:app"
intro-legacy = "intro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intro"]
