[project]
name = "intro"
version = "0.2.0"
description = "Alpha's metacognitive layer - notices what's memorable"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "logfire[fastapi,httpx]>=3.0.0",
    "opentelemetry-api>=1.20.0",
]

[project.scripts]
intro = "intro.app:app"
intro-legacy = "intro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intro"]
